<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/d1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.journaldev.snackbar.MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/maintitle"></androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/texturl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/urler"></TextView>
        <TextView
        android:id="@+id/textdate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="30dp"
        android:text="@string/datesel"></TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/searchbuttonname"
                android:textSize="20dp"
                ></Button>

            <Button
                android:id="@+id/favbutton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/favbuttonname"
                android:textSize="20dp"
                ></Button>
        </LinearLayout>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:max="100"
            android:progress="0"></ProgressBar>
        <EditText
            android:id="@+id/dp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calbuilder"
            android:textSize="20dp"></EditText>
        <TextView
            android:id="@+id/hidhdurl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="1dp"
            android:text=""
            android:textColor="@color/white"></TextView>
</LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navmenny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>

